add more updates

--- a/pipeline.ipynb
+++ b/pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -16,12 +16,12 @@
     }
    ],
    "source": [
-    "!pip install -q langchain pinecone-client tiktoken langchain-community openai spacy sentence-transformers ace_tools pandas"
+    "!pip install -q langchain pinecone-client tiktoken langchain-community openai spacy sentence-transformers ace_tools pandas langchain-openai langchain-pinecone"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -39,21 +39,18 @@
     "from langchain.docstore.document import Document\n",
     "import json\n",
     "import tiktoken\n",
+    "import requests\n",
     "\n",
     "max_tokens = 1000  # Maximum tokens per chunk\n",
     "overlap_tokens = 100  # Tokens to overlap between chunks\n",
     "\n",
+    "url = \"https://chatwithaudio.blob.core.windows.net/uploads/kp_07d5b59a68fe4b2285ed52c6ad1e32eb/transcription_5fd87ab0-4c85-49d3-9bd1-65103f1234f3.json?sp=r&st=2024-10-14T19:47:42Z&se=2024-10-15T03:47:42Z&spr=https&sv=2022-11-02&sr=b&sig=HZrdE5Umj6Cx5Ruhiqyu2ZRRamvtYrrd2Jnc9xpn08o%3D\"\n",
+    "response = requests.get(url)\n",
+    "requestJson = response.json()\n",
     "\n",
-    "\n",
-    "file_path = \"./data/paragraphs.json\"\n",
-    "\n",
-    "with open(file_path, 'r') as file:\n",
-    "    data = json.load(file)\n",
-    "\n",
-    "# Create Documents from sentences\n",
     "documents = []\n",
-    "for paragraph in data:\n",
-    "    for sentence in paragraph['sentences']:\n",
+    "for paragraph in requestJson.get('paragraphs', []):\n",
+    "    for sentence in paragraph.get('sentences', []):\n",
     "        doc = Document(\n",
     "            page_content=sentence['text'],\n",
     "            metadata={\n",
@@ -68,7 +65,6 @@
     "    return len(encoding.encode(text))\n",
     "\n",
     "sentences = []\n",
-    "token_count = 0\n",
     "for doc in documents:\n",
     "    text = doc.page_content\n",
     "    tokens = count_tokens(text)\n",
@@ -100,8 +96,6 @@
     "            i -= 1\n",
     "        current_chunk = overlap.copy()\n",
     "        current_token_count = overlap_token_count\n",
-    "\n",
-    "    # Add current sentence to current_chunk\n",
     "    current_chunk.append(sentence)\n",
     "    current_token_count += sentence_tokens\n",
     "\n",
@@ -120,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -136,6 +130,8 @@
     "\n",
     "from pinecone import Pinecone\n",
     "import os\n",
+    "\n",
+    "# NOTE: there was an update and now the Pinecone client requires the following simplified setup\n",
     "pc = Pinecone(api_key=os.getenv(\"PINECONE_API_KEY\"))\n",
     "index_name = \"chatbot\"\n",
     "pinecone_index = pc.Index(index_name)\n",
@@ -145,14 +141,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data successfully inserted into Pinecone.\n"
+      "Data successfully inserted into Pinecone for project your-project-1234.\n"
      ]
     }
    ],
@@ -160,6 +156,8 @@
     "# Block 2.2: Embed and upsert data into Pinecone\n",
     "\n",
     "from langchain.embeddings.openai import OpenAIEmbeddings\n",
+    "\n",
+    "project_id = \"your-project-1234\"\n",
     "\n",
     "# create batch embeddings\n",
     "batch_size = 100 \n",
@@ -172,27 +170,25 @@
     "    batch_embeddings = embeddings.embed_documents(batch_texts)\n",
     "    all_embeddings.extend(batch_embeddings)\n",
     "\n",
-    "\n",
-    "\n",
-    "# Upsert vectors into Pinecone in batches\n",
-    "batch_size = 100\n",
+    "# Upsert vectors into Pinecone in batches, specifying the namespace\n",
     "vectors = []\n",
     "for i, (embedding, metadata) in enumerate(zip(all_embeddings, metadatas)):\n",
     "    vector_id = f\"vec_{i}\"\n",
-    "    # Include text and any other necessary metadata\n",
     "    metadata['text'] = texts[i]\n",
     "    vectors.append({'id': vector_id, 'values': embedding, 'metadata': metadata})\n",
     "\n",
     "for i in range(0, len(vectors), batch_size):\n",
     "    batch = vectors[i:i+batch_size]\n",
-    "    pinecone_index.upsert(vectors=batch)\n",
+    "    # Upsert the batch into the specified namespace (project_id)\n",
+    "    pinecone_index.upsert(vectors=batch, namespace=project_id)\n",
     "\n",
-    "print(\"Data successfully inserted into Pinecone.\")\n"
+    "print(f\"Data successfully inserted into Pinecone for project {project_id}.\")\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +210,7 @@
     "from langchain.chains import RetrievalQA\n",
     "\n",
     "embeddings = OpenAIEmbeddings(model='text-embedding-ada-002')\n",
-    "vectorstore = Pinecone(pinecone_index, embeddings.embed_query, \"text\")\n",
+    "vectorstore = Pinecone(pinecone_index, embeddings.embed_query, \"text\", namespace=project_id)\n",
     "retriever = vectorstore.as_retriever(search_kwargs={\"k\": 3})\n",
     "llm = ChatOpenAI(model_name=\"gpt-4o-mini\", temperature=0)\n",
     "\n",
@@ -250,26 +246,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Me\\AppData\\Local\\Temp\\ipykernel_28372\\3473050761.py:5: LangChainDeprecationWarning: The method `Chain.__call__` was deprecated in langchain 0.1.0 and will be removed in 1.0. Use :meth:`~invoke` instead.\n",
+      "  result = qa_chain(query)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Answer: To get your first SaaS customer, start by validating your product idea with a landing page to capture emails and gauge interest. Engage in customer development by discussing your idea publicly and gathering feedback. Leverage your network or online communities to promote your product. Once you have an email list, launch to them with exclusive offers to convert them into customers. Consider using platforms like Product Hunt or Reddit for additional exposure.\n",
+      "Answer: Identify your target audience, create a compelling value proposition, leverage social media and online communities, offer free trials or demos, and network within relevant industry events.\n",
       "\n",
       "\n",
-      "---------------------------------------------------------\n",
-      "Text: In this video, I'm talking about how to get your first 100 customers for your SaaS product. I'm gonna be offering up actionable strategies and tactics on how you can get this done. I'm Rob Walling. I'\n",
-      "Metadata: {'end': 219.455, 'start': 0.08}\n",
-      "---\n",
-      "Text: And what this does is allows you to build that email launch list which not only provides some validation that people are interested in the value that you're talking about, but it allows you to do what\n",
-      "Metadata: {'end': 417.705, 'start': 198.88}\n",
-      "---\n",
-      "Text: So product hunt launch for example, if you go to youtube.com/microconf, search for product hunt, you'll find that we have an entire 30 minute video on how to do a product hunt launch, and it is an int\n",
-      "Metadata: {'end': 593.72, 'start': 383.275}\n",
-      "---\n"
+      "---------------------------------------------------------\n"
      ]
     }
    ],
@@ -291,139 +286,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[\n",
-      "  {\n",
-      "    \"score\": 0.5243916511535645,\n",
-      "    \"start\": 45.145,\n",
-      "    \"end\": 59.13\n",
-      "  },\n",
-      "  {\n",
-      "    \"score\": 0.5377623438835144,\n",
-      "    \"start\": 383.275,\n",
-      "    \"end\": 401.5\n",
-      "  },\n",
-      "  {\n",
-      "    \"score\": 0.5429914593696594,\n",
-      "    \"start\": 479.71002,\n",
-      "    \"end\": 484.99002\n",
-      "  },\n",
-      "  {\n",
-      "    \"score\": 0.5434920191764832,\n",
-      "    \"start\": 383.275,\n",
-      "    \"end\": 401.5\n",
-      "  },\n",
-      "  {\n",
-      "    \"score\": 0.5550068020820618,\n",
-      "    \"start\": 513.15,\n",
-      "    \"end\": 521.165\n",
-      "  },\n",
-      "  {\n",
-      "    \"score\": 0.5632674694061279,\n",
-      "    \"start\": 479.71002,\n",
-      "    \"end\": 484.99002\n",
-      "  },\n",
-      "  {\n",
-      "    \"score\": 0.6074326634407043,\n",
-      "    \"start\": 260.55,\n",
-      "    \"end\": 272.83502\n",
-      "  },\n",
-      "  {\n",
-      "    \"score\": 0.6269683837890625,\n",
-      "    \"start\": 260.55,\n",
-      "    \"end\": 272.83502\n",
-      "  },\n",
-      "  {\n",
-      "    \"score\": 0.6328544616699219,\n",
-      "    \"start\": 479.71002,\n",
-      "    \"end\": 484.99002\n",
-      "  },\n",
-      "  {\n",
-      "    \"score\": 0.6492415070533752,\n",
-      "    \"start\": 293.945,\n",
-      "    \"end\": 299.945\n",
-      "  }\n",
-      "]\n"
+      "[{'score': 0.6792088747024536, 'start': 260.55, 'end': 272.83502}, {'score': 0.6435611248016357, 'start': 503.95, 'end': 509.23}, {'score': 0.6272023916244507, 'start': 383.275, 'end': 401.5}, {'score': 0.6216945648193359, 'start': 487.55002, 'end': 495.835}, {'score': 0.6165946125984192, 'start': 45.145, 'end': 59.13}, {'score': 0.5801970958709717, 'start': 479.71002, 'end': 484.99002}, {'score': 0.5770946145057678, 'start': 140, 'end': 161.015}, {'score': 0.5500840544700623, 'start': 525.14496, 'end': 534.1}, {'score': 0.5472249984741211, 'start': 22.015, 'end': 25.695}, {'score': 0.5417923927307129, 'start': 513.15, 'end': 521.165}]\n"
      ]
     }
    ],
    "source": [
     "import json\n",
+    "import requests\n",
     "from sentence_transformers import SentenceTransformer, util\n",
-    "import pandas as pd\n",
-    "from IPython.display import display  # For displaying dataframes in Jupyter\n",
     "import torch\n",
     "import re\n",
     "\n",
-    "# Load the sentence transformer model\n",
-    "model = SentenceTransformer('sentence-transformers/all-mpnet-base-v2')  # Upgraded model\n",
+    "# Load the model for sentence embeddings\n",
+    "model = SentenceTransformer('sentence-transformers/all-mpnet-base-v2')\n",
     "\n",
-    "# Load paragraphs.json\n",
-    "with open('./data/paragraphs.json', 'r', encoding='utf-8') as json_file:\n",
-    "    paragraphs = json.load(json_file)\n",
+    "# Fetch the JSON data from a remote URL\n",
+    "url = \"https://chatwithaudio.blob.core.windows.net/uploads/kp_07d5b59a68fe4b2285ed52c6ad1e32eb/transcription_5fd87ab0-4c85-49d3-9bd1-65103f1234f3.json?sp=r&st=2024-10-14T19:47:42Z&se=2024-10-15T03:47:42Z&spr=https&sv=2022-11-02&sr=b&sig=HZrdE5Umj6Cx5Ruhiqyu2ZRRamvtYrrd2Jnc9xpn08o%3D\"\n",
+    "response = requests.get(url)\n",
+    "requestJson = response.json()\n",
     "\n",
-    "# Extract sentences and their timestamps from paragraphs.json\n",
-    "text_sentences = []\n",
+    "sentences = []\n",
     "timestamps = []\n",
     "\n",
-    "for paragraph in paragraphs:\n",
-    "    for sentence in paragraph['sentences']:\n",
-    "        text_sentences.append(sentence['text'])\n",
-    "        timestamps.append((sentence['start'], sentence['end']))\n",
+    "for paragraph in requestJson.get('paragraphs', []):\n",
+    "    for sentence in paragraph.get('sentences', []):\n",
+    "        sentences.append(sentence[\"text\"])\n",
+    "        timestamps.append((sentence[\"start\"], sentence[\"end\"]))\n",
     "\n",
-    "# Assuming 'result' contains the answer text that you want to find matches for\n",
-    "answer = result['result']\n",
-    "\n",
-    "# Split the answer into sentences using a simple regex-based approach\n",
     "def split_into_sentences(text):\n",
-    "    # This splits on punctuation that usually ends a sentence followed by space\n",
     "    return re.split(r'(?<=[.!?])\\s+', text)\n",
     "\n",
-    "# Split the answer into sentences\n",
+    "answer = result['result']\n",
     "answer_sentences = split_into_sentences(answer)\n",
     "\n",
-    "# Encode sentences from the text once\n",
-    "text_embeddings = model.encode(text_sentences, convert_to_tensor=True)\n",
+    "text_embeddings = model.encode(sentences, convert_to_tensor=True)\n",
     "\n",
-    "# Prepare a list to hold all matching results\n",
     "all_matches = []\n",
     "\n",
-    "# For each sentence in the answer, find the top 3 most similar sentences in the text\n",
     "for ans_sentence in answer_sentences:\n",
     "    ans_embedding = model.encode(ans_sentence, convert_to_tensor=True)\n",
-    "    # Compute cosine similarities between the answer sentence and all text sentences\n",
     "    cosine_scores = util.cos_sim(ans_embedding, text_embeddings)[0]\n",
-    "    # Get the top 3 matches\n",
-    "    top_results = torch.topk(cosine_scores, k=3)\n",
+    "    top_results = torch.topk(cosine_scores, k=10)\n",
+    "    \n",
     "    for idx, score in zip(top_results.indices, top_results.values):\n",
     "        all_matches.append({\n",
-    "            # 'matched': text_sentences[idx],\n",
     "            'score': score.item(),\n",
     "            'start': timestamps[idx][0],\n",
     "            'end': timestamps[idx][1]\n",
     "        })\n",
     "\n",
-    "# # Convert the matches into a DataFrame and sort by similarity score\n",
-    "# matching_data = pd.DataFrame(all_matches)\n",
-    "# matching_data = matching_data.sort_values(by='score', ascending=False)\n",
+    "all_matches = sorted(all_matches, key=lambda x: x['score'], reverse=True)\n",
     "\n",
-    "# # Limit the results to top 10\n",
-    "# matching_data = matching_data.head(10)\n",
-    "\n",
-    "# # Display the DataFrame in the notebook\n",
-    "# display(matching_data)\n",
-    "\n",
-    "\n",
-    "all_matches = sorted(all_matches, key=lambda x: x['score'])\n",
     "top_matches = all_matches[:10]\n",
-    "top_matches_json = json.dumps(top_matches, indent=2)\n",
-    "print(top_matches_json)\n"
+    "print(top_matches)\n"
    ]
   }
  ],
