--- a/rag.ipynb
+++ b/rag.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "from haystack.document_stores.in_memory import InMemoryDocumentStore\n",
     "from pathlib import Path\n",
-    "from haystack import Document \n",
+    "from haystack import Document\n",
     "from haystack.components.embedders import SentenceTransformersDocumentEmbedder\n",
     "from haystack.components.embedders import SentenceTransformersTextEmbedder\n",
     "from haystack.components.retrievers.in_memory import InMemoryEmbeddingRetriever\n",
@@ -103,7 +103,9 @@
     }
    ],
    "source": [
-    "doc_embedder = SentenceTransformersDocumentEmbedder(model=\"sentence-transformers/all-MiniLM-L6-v2\")\n",
+    "doc_embedder = SentenceTransformersDocumentEmbedder(\n",
+    "    model=\"sentence-transformers/all-MiniLM-L6-v2\"\n",
+    ")\n",
     "doc_embedder.warm_up()"
    ]
   },
@@ -163,7 +165,9 @@
    "source": [
     "from haystack.components.builders import PromptBuilder\n",
     "\n",
-    "text_embedder = SentenceTransformersTextEmbedder(model=\"sentence-transformers/all-MiniLM-L6-v2\")\n",
+    "text_embedder = SentenceTransformersTextEmbedder(\n",
+    "    model=\"sentence-transformers/all-MiniLM-L6-v2\"\n",
+    ")\n",
     "retriever = InMemoryEmbeddingRetriever(document_store)\n",
     "\n",
     "template = \"\"\"\n",
@@ -298,7 +302,9 @@
    "source": [
     "question = \"How to get my first saas customers?\"\n",
     "\n",
-    "response = basic_rag_pipeline.run({\"text_embedder\": {\"text\": question}, \"prompt_builder\": {\"question\": question}})\n",
+    "response = basic_rag_pipeline.run(\n",
+    "    {\"text_embedder\": {\"text\": question}, \"prompt_builder\": {\"question\": question}}\n",
+    ")\n",
     "\n",
     "print(response[\"llm\"][\"replies\"][0])"
    ]
@@ -320,7 +326,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
